[gd_scene load_steps=7 format=3 uid="uid://bepyngk6nyw3i"]

[ext_resource type="Script" uid="uid://bg6rmeae6mp2a" path="res://upgrade.gd" id="1_a0bff"]
[ext_resource type="Texture2D" uid="uid://cxcwih7xnq286" path="res://btn.png" id="1_tlmoe"]
[ext_resource type="Theme" uid="uid://defuiheer8gv6" path="res://new_theme.tres" id="2_a4xni"]
[ext_resource type="FontFile" uid="uid://dwciu7ewc1wd6" path="res://Kenney Pixel.ttf" id="3_a0bff"]
[ext_resource type="Texture2D" uid="uid://drxi5ahna355o" path="res://btn2.png" id="3_g4621"]
[ext_resource type="FontFile" uid="uid://dyx4xkov5usjj" path="res://Kenney Mini.ttf" id="4_a4xni"]

[node name="Upgrade" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 132.0
offset_bottom = 50.0
mouse_filter = 2
script = ExtResource("1_a0bff")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 33.0
offset_bottom = 9.0
scale = Vector2(4, 4)
texture_normal = ExtResource("1_tlmoe")
texture_pressed = ExtResource("3_g4621")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 122.0
offset_bottom = 18.0
mouse_filter = 2
theme = ExtResource("2_a4xni")
theme_override_fonts/normal_font = ExtResource("3_a0bff")
theme_override_font_sizes/bold_italics_font_size = 6
theme_override_font_sizes/normal_font_size = 16
text = "Autoclicker"

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 14.0
offset_right = 127.0
offset_bottom = 26.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_a4xni")
theme_override_font_sizes/normal_font_size = 8
text = "Cost: "

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
